New commandline options and made better
- Command line option ThrottleBySystemResources
- Enhancements to the ExecuteAndWait and GetCompressionCommandlineOptions
- Delphi.ProcessAffinity.Utils, to as default use only performance cores
- File comporessor also uses GetCompressionCommandlineOptions

--- a/DirectoryCompress7z.dproj
+++ b/DirectoryCompress7z.dproj
@@ -87,6 +87,7 @@
         <DCCReference Include="Units\Common\CUUnit.Utils.pas"/>
         <DCCReference Include="Units\DirectoryCompress\DCUnit.CommandLine.pas"/>
         <DCCReference Include="Units\DirectoryCompress\DCUnit.DirectoryCompressor.pas"/>
+        <DCCReference Include="Units\Common\Delphi.ProcessAffinity.Utils.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
