--- a/FileCompress7z.dproj
+++ b/FileCompress7z.dproj
@@ -92,6 +92,7 @@
         <VerInfo_Locale>1033</VerInfo_Locale>
         <Manifest_File>(None)</Manifest_File>
         <AppDPIAwarenessMode>none</AppDPIAwarenessMode>
+        <Debugger_RunParams>-SourceRoot=&quot;T:\&quot; -FileNameFilter=&quot;*.ova&quot; -CoresToUse=4 -DeleteSourceItemWhenDone:True</Debugger_RunParams>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
